# Custom-TTS-voice-agent

./: ENV_TEMPLATE.md  LAMBDA_CLOUD_DEPLOYMENT.md  LAMBDA_DEPLOYMENT.md  SYSTEMD_TTS_SERVICE.md  deploy_to_lambda.sh  lambda_handler.py  pyproject.toml  test_agent_call.py
src/: siriusmed_agent.py  siriusmed_gemini_agent.py  sparktts_tts.py  tts_server.py
src/sparktts/: __init__.py
